--- a/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/Users/FollowersPage.xaml
+++ b/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/Users/FollowersPage.xaml
@@ -19,31 +19,25 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
+                            <Grid ColumnDefinitions="Auto, *" ColumnSpacing="10">
 
-                            <StackLayout Spacing="16" Margin="0,10" Padding="0">
-                                <!--Header-->
-                                <StackLayout Grid.Row="0" Orientation="Horizontal">
+                                <views:AvatarView Grid.Column="0"
+                                    Text="{Binding Avatar}"  Source="{Binding ProfileImage}"  
+                                    Size="50" Color="{Binding AvatarColor}" TextColor="White" 
+                                    VerticalOptions="StartAndExpand" Margin="8"/>
 
-                                    <!--<views:AvatarView Text="{Binding Avatar}"  Source="{Binding ProfileImage}"
-                                                                      VerticalOptions="StartAndExpand" Margin="8"/>-->
-
-                                    <views:AvatarView Text="{Binding Avatar}"  Source="{Binding ProfileImage}"  
-                                                                      Size="50" Color="{Binding AvatarColor}" TextColor="White" 
-                                                                      VerticalOptions="StartAndExpand" Margin="8"/>
-
-                                    <StackLayout Margin="2" VerticalOptions="Center">
-                                        <Label Text="{Binding Name}" FontSize="Medium" 
+                                <StackLayout Margin="2" Grid.Column="1" VerticalOptions="Center">
+                                    <Label Text="{Binding Name}" FontSize="Medium" 
                                            FontAttributes="Bold"
                                            VerticalOptions="Center"/>
 
-                                        <Label Text="{Binding Description}" FontSize="Subtitle" 
-                                           TextColor="DarkGray" FontAttributes="Italic"
+                                    <Label Text="{Binding Description}" FontSize="Subtitle" 
+                                               TextColor="DarkGray" FontAttributes="Italic"
                                                MaxLines="1"
                                                LineBreakMode="TailTruncation"
-                                           VerticalOptions="Center"/>
-                                    </StackLayout>
+                                               VerticalOptions="Center"/>
                                 </StackLayout>
-                            </StackLayout>
+                            </Grid>
 
                         </ViewCell>
                     </DataTemplate>
